[package]
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
name = "solo-rust-examples"
version = "0.1.0"
description = "Various mini-firmwares to explore Rust on Solo"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
nb = "0.1.1"
panic-halt = "0.2.0"

[dependencies.stm32l4]
version = "0.5.0"
features = ["stm32l4x2", "rt"]

[dependencies.stm32l4xx-hal]
version = "0.3.4"
features = ["stm32l4x2", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols
lto = true # better optimizations
opt-level = "z" # size
